Add PassengerAndFreightTraffic
